#include "kmemo.h"
#include "./ui_kmemo.h"
#include <QMessageBox>
#include <QApplication>
#include <QStatusBar>
#include <QPushButton>
#include <QTextEdit>
#include <QLabel>
#include <QDesktopWidget>
#include "models/taskmodel.h"
#include "models/task.h"

kmemo::kmemo(QWidget *parent)
    : QMainWindow(parent)
    , ui(new Ui::kmemo)
    , m_taskModel(nullptr)
{
    ui->setupUi(this);
    setupSimpleUI();
    setupTaskModel();
    setupSimpleConnections();

    // Initialize status bar
    updateStatusBar();

    // Setup frameless window
    setupFramelessWindow();
}

kmemo::~kmemo()
{
    delete ui;
}

void kmemo::setupSimpleUI()
{
    // 简化的UI初始化，只处理新布局中存在的控件

    // 初始化任务计数显示
    updateTaskCount();
}

void kmemo::setupTaskModel()
{
    m_taskModel = new TaskModel(this);
    // 暂时不连接到视图，等待后续集成
}

void kmemo::setupSimpleConnections()
{
    // 连接新UI中存在的控件信号

    // 高级功能按钮
    if (ui->advancedFeaturesBtn) {
        connect(ui->advancedFeaturesBtn, &QPushButton::clicked,
                this, &kmemo::onAdvancedFeaturesClicked);
    }

    // 菜单按钮
    if (ui->menuBtn) {
        connect(ui->menuBtn, &QPushButton::clicked,
                this, &kmemo::onMenuClicked);
    }

    // 确认添加按钮
    if (ui->confirmAddBtn) {
        connect(ui->confirmAddBtn, &QPushButton::clicked,
                this, &kmemo::onConfirmAddClicked);
    }

    // 取消添加按钮
    if (ui->cancelAddBtn) {
        connect(ui->cancelAddBtn, &QPushButton::clicked,
                this, &kmemo::onCancelAddClicked);
    }

    // 排序按钮
    if (ui->sortTasksBtn) {
        connect(ui->sortTasksBtn, &QPushButton::clicked,
                this, &kmemo::onSortTasksClicked);
    }
}

void kmemo::updateTaskCount()
{
    if (ui->taskCountLabel) {
        // 临时显示默认值
        ui->taskCountLabel->setText("0 tasks");
    }
}

void kmemo::updateStatusBar()
{
    // 简化的状态栏更新
    statusBar()->showMessage("K-memo Ready");
}

// 简化的槽函数实现

void kmemo::onAdvancedFeaturesClicked()
{
    QMessageBox::information(this, "Advanced Features", "Advanced features panel will be implemented in future versions.");
}

void kmemo::onMenuClicked()
{
    // 显示菜单或设置对话框
    QMessageBox::information(this, "Menu", "Menu functionality will be implemented in future versions.");
}

void kmemo::onConfirmAddClicked()
{
    if (ui->taskInputTextEdit) {
        QString taskContent = ui->taskInputTextEdit->toPlainText().trimmed();
        if (!taskContent.isEmpty()) {
            // 创建新任务的逻辑
            addNewTask(taskContent);
            ui->taskInputTextEdit->clear();
        }
    }
}

void kmemo::onCancelAddClicked()
{
    if (ui->taskInputTextEdit) {
        ui->taskInputTextEdit->clear();
    }
}

void kmemo::onSortTasksClicked()
{
    QMessageBox::information(this, "Sort", "Task sorting functionality will be implemented in future versions.");
}

void kmemo::addNewTask(const QString &title)
{
    // 临时的任务添加逻辑
    if (m_taskModel) {
        Task newTask(title);
        m_taskModel->addTask(newTask);
        updateTaskCount();
    }
}

// 保留一些必要的方法存根，避免链接错误

void kmemo::onAddTaskClicked()
{
    // 兼容性方法
    onConfirmAddClicked();
}

void kmemo::onDeleteTaskClicked()
{
    // 临时实现
}

void kmemo::onCompleteTaskClicked()
{
    // 临时实现
}

void kmemo::onCategoryFilterChanged(int index)
{
    // 临时实现
    Q_UNUSED(index)
}

void kmemo::onStatusFilterChanged(int index)
{
    // 临时实现
    Q_UNUSED(index)
}

void kmemo::onTaskSelectionChanged()
{
    // 临时实现
}

void kmemo::refreshTaskList()
{
    // 临时实现
    updateTaskCount();
}

void kmemo::setupContextMenu()
{
    // 临时实现
}

void kmemo::populateFilters()
{
    // 临时实现
}

void kmemo::integrateCustomComponents()
{
    // 临时实现
}

// 缺失的槽函数实现
void kmemo::onTaskDoubleClicked(const QModelIndex &index)
{
    // 临时实现
    Q_UNUSED(index)
}

void kmemo::onTaskContextMenuRequested(const QPoint &pos)
{
    // 临时实现
    Q_UNUSED(pos)
}

void kmemo::onThemeToggleClicked()
{
    // 临时实现
}

void kmemo::onToggleDetailPanel()
{
    // 临时实现
}

void kmemo::onSearchTextChanged(const QString &text)
{
    // 临时实现
    Q_UNUSED(text)
}

void kmemo::setupFramelessWindow()
{
    // 设置无边框窗口
    setWindowFlags(Qt::FramelessWindowHint | Qt::WindowStaysOnTopHint);
    setAttribute(Qt::WA_TranslucentBackground);

    // 设置固定大小匹配HTML设计
    setFixedSize(400, 700);

    // 窗口居中
    QRect screenGeometry = QApplication::desktop()->screenGeometry();
    int x = (screenGeometry.width() - width()) / 2;
    int y = (screenGeometry.height() - height()) / 2;
    move(x, y);
}